@@ -1,4 +1,5 @@
 from __future__ import generators
+import string
 
 #==============================================================================
 # enumerate
@@ -13,12 +14,19 @@ def enumerate(seq):
 #==============================================================================
 # makeid
 #==============================================================================
+_valid_chars = string.ascii_letters + string.digits + '_'
+_valid_chars = dict(zip(_valid_chars, _valid_chars))
+
 def makeid(name):
     'Returns the name as a valid identifier'
-    for invalidchar in ('::', '<', '>', ' ', ',', '.', '#'):
-        name = name.replace(invalidchar, '_') 
+    newname = []
+    for char in name:
+        if char not in _valid_chars:
+            char = '_'
+        newname.append(char)
+    newname = ''.join(newname)
     # avoid duplications of '_' chars
-    names = [x for x in name.split('_') if x]
+    names = [x for x in newname.split('_') if x]
     return '_'.join(names)
  
 
